[project]
name = "gem-logging"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Benoit Roux", email = "benoit.roux@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
]

[project.scripts]
gem-logging = "gem_logging:log_config"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
